<resources>
    <string name="app_name">Credit</string>
    <string name="startup_text">Credit</string>
    <string name="get_started">Get Started</string>
    <string name="register_title">Register</string>
    <string name="signin_title">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forget_password">Did you forgot your password?</string>
    <string name="dashboard_title">Dash Board</string>
    <string name="new_addition">New Addition</string>
    <string name="bank_procedure">Bank Procedure</string>
    <string name="repayments">Repayments</string>
    <string name="reports">Reports</string>
    <string name="student_record">Student Record</string>
    <string name="greeting">Welcome</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number">ID Number</string>
    <string name="identity_type">Identity type</string>
    <string name="next">Next</string>
    <string name="guardian">Guardian</string>
    <string name="occupation">Occupation</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="adjective">Adjective</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="brother">Brother</string>
    <string name="sister">Sister</string>
    <string name="university">University</string>
    <string name="college">College</string>
    <string name="semester">Semester</string>
    <string name="class_room">Classroom</string>
    <string name="fees">Fees</string>
    <string name="save">Save</string>
    <string name="university_id">University Id</string>
    <string name="please_complete_the_form">Please complete the form</string>
    <string name="password_must_be_8">Password must be 8 character long</string>
    <string name="wrong_access">Wrong username or password</string>
    <string name="exit_disclaimer">Press exit again to leave the app</string>
    <string name="bank">Bank</string>
    <string name="bank_type">Branch</string>
    <string name="account_number">Account Number</string>
    <string name="total_tuition_fees">Total tuition fees</string>
    <string name="payment_period">Payment Period</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="amount_of_repayment">Amount of repayment</string>
    <string name="fees_details">Fees details</string>
    <string name="search">Search</string>
    <string name="unable_to_register">Unable to register</string>
    <string name="unable_to_save">Unable to save</string>
    <string name="student_name">Student Name</string>
    <string name="guardian_name">Guardian Name</string>
    <string name="case_study">Student details</string>
    <string name="empty_field" translatable="false">-- . --</string>
    <string name="university_id_not_found">University id not found</string>
    <string name="payment_done">Payment Done</string>
    <string name="find">Find</string>
    <string name="student_info">Student Info</string>
    <string name="student_not_found">Student Not Found</string>
    <string name="housing">Housing</string>
    <string name="new_registration">New Registration</string>
    <string name="accommodation_details">Accommodation Details</string>
    <string name="interior">Interior</string>
    <string name="room_number">Room Number</string>
    <string name="wing">Wing</string>
    <string name="please_select_a_valid_university_id">Please select a valid university id</string>
    <string name="bedroom_number">Bedroom Number</string>
    <string name="cupboard_number">Cupboard Number</string>
    <string name="housing_fee">Housing Fee</string>
    <string name="residential_fees">Residential Fees</string>
    <string name="permissions">Permissions</string>
    <string name="warranty">Warranty</string>
    <string name="accommodation_fees">Accommodation Fees</string>
    <string name="amount">Amount</string>
    <string name="receipt_number">Receipt Number</string>
    <string name="year_history">Year History</string>
    <string name="return_date">Return Date</string>
    <string name="number_of_days">Number Of Days</string>
    <string name="visiting_to_name">Visiting To Name</string>
    <string name="visiting_to_address">Visiting To Address</string>
    <string name="visiting_to_phone_number">Visiting To Phone Number</string>
    <string name="number_of_family_escapes">Number of family escapes</string>
    <string name="number_of_brothers_in_university">Number of brothers in university</string>
    <string name="is_father_alive">Is father alive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>