<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HousingRegistrationActivity">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtUniversityId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:text="@string/university_id" />

        <AutoCompleteTextView
            android:id="@+id/edtUniversityId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUniversityId"
            android:padding="10dp"
            android:background="@drawable/border"
            android:singleLine="true"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txtStudentInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtUniversityId"
            android:text="@string/student_info"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvStudentInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtStudentInfo">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/student_name"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/phone_number"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/university"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/college"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvStudentName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />

                        <TextView
                            android:id="@+id/tvStudentPhoneNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />

                        <TextView
                            android:id="@+id/tvUniversity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />

                        <TextView
                            android:id="@+id/tvCollege"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/txtAccommodationDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nsvStudentInfo"
            android:text="@string/accommodation_details"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"/>

        <TextView
            android:id="@+id/txtInterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAccommodationDetails"
            android:layout_marginBottom="5dp"
            android:text="@string/interior" />

        <EditText
            android:id="@+id/edtInterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInterior"
            android:padding="10dp"
            android:background="@drawable/border"
            android:singleLine="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtWing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtInterior"
            android:layout_marginBottom="5dp"
            android:text="@string/wing" />

        <EditText
            android:id="@+id/edtWing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtWing"
            android:padding="10dp"
            android:background="@drawable/border"
            android:singleLine="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtRoomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtWing"
            android:layout_marginBottom="5dp"
            android:text="@string/room_number" />

        <EditText
            android:id="@+id/edtRoomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRoomNumber"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/border"
            android:singleLine="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtBedNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRoomNumber"
            android:layout_marginBottom="5dp"
            android:text="@string/bedroom_number" />

        <EditText
            android:id="@+id/edtBedNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBedNumber"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/border"
            android:singleLine="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/txtCupboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtBedNumber"
            android:layout_marginBottom="5dp"
            android:text="@string/cupboard_number" />

        <EditText
            android:id="@+id/edtCupboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtCupboard"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/border"
            android:singleLine="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnSaveAccommodation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_below="@+id/edtCupboard"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:drawableEnd="@drawable/ic_baseline_save_24"/>

    </RelativeLayout>

</ScrollView>