<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentRecordActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/trHeader"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:text="@string/name"
                android:gravity="center"
                android:textColor="@color/light_green_700"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <TextView
                android:text="@string/university"
                android:gravity="center"
                android:textColor="@color/light_green_700"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <TextView
                android:text="@string/college"
                android:gravity="center"
                android:textColor="@color/light_green_700"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <TextView
                android:text="@string/fees"
                android:gravity="center"
                android:textColor="@color/light_green_700"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvStudentRecords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>